PR port-mac68k/51923 Remove unused SYSPTSIZE and USRPTSIZE from m68k ports. Ok jklos